@@ -238,6 +238,26 @@ proc_spawn_process(char *lpszwapper, fcgid_proc_info * procinfo,
 		}
 	}
 
+	{
+		int oldflags = fcntl (unix_socket, F_GETFD, 0);
+		if (oldflags < 0) {
+			ap_log_error(APLOG_MARK, APLOG_WARNING, apr_get_os_error(),
+						procinfo->main_server,
+						"mod_fcgid: fcntl F_GETFD failed");
+			close(unix_socket);
+			return errno;
+		}
+		
+		oldflags |= FD_CLOEXEC;
+		if (fcntl (unix_socket, F_SETFD, oldflags) < 0) {
+			ap_log_error(APLOG_MARK, APLOG_WARNING, apr_get_os_error(),
+						procinfo->main_server,
+						"mod_fcgid: fcntl F_SETFD failed");
+			close(unix_socket);
+			return errno;
+		}
+	}
+
 	/* Build environment variables */
 	proc_environ = ap_create_environment(procnode->proc_pool,
 										 procinfo->proc_environ);
